2004-05-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-get-unread-articles-in-group): Don't do
	stuff for non-living group.s

2004-05-18  Jesper Harder  <harder@ifa.au.dk>

	* gnus-art.el (gnus-article-followup-with-original)
	(gnus-article-reply-with-original): gnus-mark-active-p ->
	gnus-region-active-p.

2004-05-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-summary-prepare-exit): fix messages, so they show
	only when there is spam or ham to be processed

2004-05-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-delete-crash-box): Refactor.
	(mail-source-fetch): Use it.
	(mail-source-fetch-file): Ditto.
	(mail-source-fetch-directory): Run postscript in loop. 
	(mail-source-fetch-pop): Delete.
	(mail-source-fetch-maildir): Ditto.
	(mail-source-fetch-imap): Ditto.

	* imap.el (imap-authenticators): Comment out sasl.

	* message.el (message-skip-to-next-address): New function.
	(message-fill-header-address): Refactor.
	(message-fill-address): Use it.
	(message-delete-address): Use it.
	(message-fill-header-general): Refactor.
	(message-fill-field-address): Rename.
	(message-narrow-to-field): Find the start of the header. 
	(message-header-format-alist): Don't pre-fill.
	(message-fill-header): Removed.
	(message-insert-header): New function.
	(message-shorten-references): Use it.

	* rfc2047.el (rfc2047-field-value): Strip props.

	* mail-parse.el (mail-header-make-address): New alias.

	* ietf-drums.el (ietf-drums-make-address): New function.

	* imap.el: Add compiler directives.

	* gnus-score.el (gnus-score-edit-done): run-hook->run-hooks. 

	* gnus-art.el (article-decode-idna-rhs): Don't use
	message-idna-inside-rhs-p. 

2004-05-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-idna-inside-rhs-p): Removed.
	(message-idna-to-ascii-rhs-1): Use proper address parsing.

	* gnus-art.el (gnus-emphasis-alist): Removed strikethru; too many
	false positives.
